// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: className css 1`] = `
".MuiPaper-root {
  background-color: #fff;
}
.MuiPaper-rounded {
  border-radius: 4px;
}
.MuiPaper-elevation0 {
  box-shadow: none;
}
.MuiPaper-elevation1 {
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation2 {
  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation3 {
  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation4 {
  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation5 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation6 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation7 {
  box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation8 {
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation9 {
  box-shadow: 0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation10 {
  box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation11 {
  box-shadow: 0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation12 {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation13 {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation14 {
  box-shadow: 0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation15 {
  box-shadow: 0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation16 {
  box-shadow: 0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation17 {
  box-shadow: 0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation18 {
  box-shadow: 0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation19 {
  box-shadow: 0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation20 {
  box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation21 {
  box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation22 {
  box-shadow: 0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation23 {
  box-shadow: 0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12);
}
.MuiPaper-elevation24 {
  box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12);
}
.MuiInput-root {
  color: rgba(0, 0, 0, 0.87);
  display: inline-flex;
  position: relative;
  font-size: 1rem;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.1875em;
}
.MuiInput-root.MuiInput-disabled {
  color: rgba(0, 0, 0, 0.38);
}
label + .MuiInput-formControl {
  margin-top: 16px;
}
.MuiInput-underline:after {
  left: 0;
  right: 0;
  bottom: 0;
  content: \\"\\";
  position: absolute;
  transform: scaleX(0);
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  border-bottom: 2px solid #303f9f;
  pointer-events: none;
}
.MuiInput-underline.MuiInput-focused:after {
  transform: scaleX(1);
}
.MuiInput-underline.MuiInput-error:after {
  transform: scaleX(1);
  border-bottom-color: #f44336;
}
.MuiInput-underline:before {
  left: 0;
  right: 0;
  bottom: 0;
  content: \\"\\\\00a0\\";
  position: absolute;
  transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
  pointer-events: none;
}
.MuiInput-underline:hover:not(.MuiInput-disabled):not(.MuiInput-focused):not(.MuiInput-error):before {
  border-bottom: 2px solid rgba(0, 0, 0, 0.87);
}
.MuiInput-underline.MuiInput-disabled:before {
  border-bottom: 1px dotted rgba(0, 0, 0, 0.42);
}
.MuiInput-multiline {
  padding: 6px 0 7px;
}
.MuiInput-fullWidth {
  width: 100%;
}
.MuiInput-input {
  font: inherit;
  color: currentColor;
  border: 0;
  margin: 0;
  padding: 6px 0 7px;
  display: block;
  min-width: 0;
  flex-grow: 1;
  box-sizing: content-box;
  background: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}
.MuiInput-input::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.MuiInput-input::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.MuiInput-input:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.MuiInput-input::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.MuiInput-input:focus {
  outline: 0;
}
.MuiInput-input:invalid {
  box-shadow: none;
}
.MuiInput-input::-webkit-search-decoration {
  -webkit-appearance: none;
}
.MuiInput-input.MuiInput-disabled {
  opacity: 1;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input::-webkit-input-placeholder {
  opacity: 0;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input::-moz-placeholder {
  opacity: 0;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input:-ms-input-placeholder {
  opacity: 0;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input::-ms-input-placeholder {
  opacity: 0;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input:focus::-webkit-input-placeholder {
  opacity: 0.42;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input:focus::-moz-placeholder {
  opacity: 0.42;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input:focus:-ms-input-placeholder {
  opacity: 0.42;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input:focus::-ms-input-placeholder {
  opacity: 0.42;
}
.MuiInput-inputMarginDense {
  padding-top: 3px;
}
.MuiInput-inputMultiline {
  resize: none;
  padding: 0;
}
.MuiInput-inputType {
  height: 1.1875em;
}
.MuiInput-inputTypeSearch {
  -moz-appearance: textfield;
  -webkit-appearance: textfield;
}
.MuiFormControl-root {
  margin: 0;
  border: 0;
  display: inline-flex;
  padding: 0;
  position: relative;
  min-width: 0;
  flex-direction: column;
}
.MuiFormControl-marginNormal {
  margin-top: 16px;
  margin-bottom: 8px;
}
.MuiFormControl-marginDense {
  margin-top: 8px;
  margin-bottom: 4px;
}
.MuiFormControl-fullWidth {
  width: 100%;
}
.fcInput-input > input {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.fcInput-readOnly > input {
  color: rgba(0, 0, 0, 0.87);
}
.fcAutocomplete-root {
  position: relative;
  flex-grow: 1;
}
.fcAutocomplete-suggestionsContainerOpen {
  left: 0;
  right: 0;
  z-index: 1500;
  position: absolute;
  overflow: auto;
  margin-top: 8px;
  max-height: 240px;
  margin-bottom: 24px;
}
.fcAutocomplete-suggestion {
  display: block;
}
.fcAutocomplete-suggestionContent {
  font-weight: 300;
}
.fcAutocomplete-highlight {
  font-weight: 500;
}
.fcAutocomplete-suggestionsList {
  margin: 0;
  padding: 0;
  list-style-type: none;
}
.fcAutocomplete-textField {
  width: 100%;
}"
`;

exports[`snapshot: className html 1`] = `
<form
  className="fcAutocomplete-root test-class"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
    >
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-underline"
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          className="MuiInput-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: only label css 1`] = `
".MuiFormLabel-root {
  color: rgba(0, 0, 0, 0.54);
  padding: 0;
  font-size: 1rem;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1;
}
.MuiFormLabel-root.MuiFormLabel-focused {
  color: #303f9f;
}
.MuiFormLabel-root.MuiFormLabel-disabled {
  color: rgba(0, 0, 0, 0.38);
}
.MuiFormLabel-root.MuiFormLabel-error {
  color: #f44336;
}
.MuiFormLabel-asterisk.MuiFormLabel-error {
  color: #f44336;
}
.MuiInputLabel-root {
  transform-origin: top left;
}
.MuiInputLabel-formControl {
  top: 0;
  left: 0;
  position: absolute;
  transform: translate(0, 24px) scale(1);
}
.MuiInputLabel-marginDense {
  transform: translate(0, 21px) scale(1);
}
.MuiInputLabel-shrink {
  transform: translate(0, 1.5px) scale(0.75);
  transform-origin: top left;
}
.MuiInputLabel-animated {
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}"
`;

exports[`snapshot: only label html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
        data-shrink={false}
      >
        autocomplete
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-underline"
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          className="MuiInput-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: read only css 1`] = `""`;

exports[`snapshot: read only html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
      >
        autocomplete
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-disabled MuiInput-fullWidth MuiInput-formControl MuiInput-underline"
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          className="MuiInput-input MuiInput-disabled"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value="suggest"
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: should be under previous css 1`] = `""`;

exports[`snapshot: should be under previous html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
      >
        should be under previous
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-underline"
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          className="MuiInput-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value="should be under previous"
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: with handlers css 1`] = `""`;

exports[`snapshot: with handlers css 2`] = `
".MuiTouchRipple-root {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  z-index: 0;
  position: absolute;
  overflow: hidden;
  border-radius: inherit;
  pointer-events: none;
}
.MuiTouchRipple-ripple {
  top: 0;
  left: 0;
  width: 50px;
  height: 50px;
  opacity: 0;
  position: absolute;
}
.MuiTouchRipple-rippleVisible {
  opacity: 0.3;
  transform: scale(1);
  animation: mui-ripple-enter 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-ripplePulsate {
  animation-duration: 200ms;
}
.MuiTouchRipple-child {
  width: 100%;
  height: 100%;
  opacity: 1;
  display: block;
  border-radius: 50%;
  background-color: currentColor;
}
.MuiTouchRipple-childLeaving {
  opacity: 0;
  animation: mui-ripple-exit 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-childPulsate {
  top: 0;
  left: 0;
  position: absolute;
  animation: mui-ripple-pulsate 2500ms cubic-bezier(0.4, 0, 0.2, 1) 200ms infinite;
}
@keyframes mui-ripple-enter {
  0% {
    opacity: 0.1;
    transform: scale(0);
  }
  100% {
    opacity: 0.3;
    transform: scale(1);
  }
}
@keyframes mui-ripple-exit {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes mui-ripple-pulsate {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(0.92);
  }
  100% {
    transform: scale(1);
  }
}
.MuiButtonBase-root {
  color: inherit;
  cursor: pointer;
  margin: 0;
  border: 0;
  display: inline-flex;
  padding: 0;
  outline: none;
  position: relative;
  user-select: none;
  align-items: center;
  border-radius: 0;
  vertical-align: middle;
  justify-content: center;
  -moz-appearance: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}
.MuiButtonBase-root::-moz-focus-inner {
  border-style: none;
}
.MuiButtonBase-root.MuiButtonBase-disabled {
  cursor: default;
  pointer-events: none;
}
.MuiListItem-root {
  width: 100%;
  display: flex;
  position: relative;
  box-sizing: border-box;
  text-align: left;
  align-items: center;
  justify-content: flex-start;
  text-decoration: none;
}
.MuiListItem-container {
  position: relative;
}
.MuiListItem-focusVisible {
  background-color: rgba(0, 0, 0, 0.08);
}
.MuiListItem-default {
  padding-top: 12px;
  padding-bottom: 12px;
}
.MuiListItem-dense {
  padding-top: 8px;
  padding-bottom: 8px;
}
.MuiListItem-disabled {
  opacity: 0.5;
}
.MuiListItem-divider {
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
  background-clip: padding-box;
}
.MuiListItem-gutters {
  padding-left: 16px;
  padding-right: 16px;
}
@media (min-width:600px) {
  .MuiListItem-gutters {
    padding-left: 24px;
    padding-right: 24px;
  }
}
.MuiListItem-button {
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.MuiListItem-button:hover {
  text-decoration: none;
  background-color: rgba(0, 0, 0, 0.08);
}
@media (hover: none) {
  .MuiListItem-button:hover {
    background-color: transparent;
  }
}
.MuiListItem-secondaryAction {
  padding-right: 32px;
}
.MuiMenuItem-root {
  width: auto;
  color: rgba(0, 0, 0, 0.87);
  height: 24px;
  overflow: hidden;
  font-size: 1rem;
  box-sizing: content-box;
  font-weight: 400;
  line-height: 1.5em;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  white-space: nowrap;
  padding-left: 16px;
  text-overflow: ellipsis;
  padding-right: 16px;
}
.MuiMenuItem-root.MuiMenuItem-selected {
  background-color: rgba(0, 0, 0, 0.14);
}"
`;

exports[`snapshot: with handlers html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
        data-shrink={false}
      >
        autocomplete
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-underline"
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          className="MuiInput-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: with handlers html 2`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
      >
        autocomplete
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={true}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-underline"
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          className="MuiInput-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value="sup sug"
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation2 fcAutocomplete-suggestionsContainerOpen"
      id="react-autowhatever-1"
    >
      <ul
        className="fcAutocomplete-suggestionsList"
        role="listbox"
      >
        <li
          className="fcAutocomplete-suggestion"
          data-section-index={null}
          data-suggestion-index={0}
          id="react-autowhatever-1--item-0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="option"
        >
          <div
            className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <div>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sup
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                er 
              </span>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sug
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                gest1
              </span>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </li>
        <li
          className="fcAutocomplete-suggestion"
          data-section-index={null}
          data-suggestion-index={1}
          id="react-autowhatever-1--item-1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="option"
        >
          <div
            className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <div>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sup
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                er 
              </span>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sug
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                gest2
              </span>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </li>
        <li
          className="fcAutocomplete-suggestion"
          data-section-index={null}
          data-suggestion-index={2}
          id="react-autowhatever-1--item-2"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="option"
        >
          <div
            className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <div>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sup
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                er 
              </span>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sug
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                gest3
              </span>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
</form>
`;

exports[`snapshot: with text css 1`] = `""`;

exports[`snapshot: with text html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
      >
        autocomplete
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-underline"
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          className="MuiInput-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value="suggest"
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: without props css 1`] = `""`;

exports[`snapshot: without props html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
    >
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-underline"
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          className="MuiInput-input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;
